[gd_scene load_steps=4 format=3 uid="uid://ds38qnqn3odr5"]

[ext_resource type="Script" uid="uid://d1bym8wb0av7e" path="res://Scenes/Level Selector/scripts/shop.gd" id="1_e005r"]
[ext_resource type="Texture2D" uid="uid://8ldi2nvt4qpq" path="res://Scenes/Main menu/Images/fundo.png" id="1_flvvs"]
[ext_resource type="Texture2D" uid="uid://c0tobgmtwxgrj" path="res://Scenes/Game/Images/pa.png" id="3_ndouf"]

[node name="Shop" type="Node2D"]
scale = Vector2(2.04897, 2.04897)
script = ExtResource("1_e005r")

[node name="BG_shop" type="Sprite2D" parent="."]
modulate = Color(0.470076, 0.470076, 0.470076, 1)
position = Vector2(177.162, -96.1459)
scale = Vector2(0.182002, 0.177144)
texture = ExtResource("1_flvvs")

[node name="Shop_name" type="Label" parent="."]
offset_left = 152.76
offset_top = -188.387
offset_right = 192.76
offset_bottom = -165.387
text = "Shop"

[node name="Armas" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = -164.0
offset_right = 352.0
offset_bottom = -2.0

[node name="Weapon_image" type="Sprite2D" parent="Armas"]
texture_filter = 1
position = Vector2(62.3748, 62.4856)
scale = Vector2(0.4, 0.622)
texture = ExtResource("3_ndouf")

[node name="Name" type="Label" parent="Armas"]
layout_mode = 0
offset_left = 9.0
offset_top = 6.0
offset_right = 117.0
offset_bottom = 29.0
text = "Name Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Money_symbol" type="Label" parent="Armas"]
layout_mode = 0
offset_left = 11.6176
offset_top = 98.1132
offset_right = 31.6176
offset_bottom = 121.113
text = "R$"

[node name="Price" type="Label" parent="Armas/Money_symbol"]
layout_mode = 0
offset_left = 21.4742
offset_right = 61.4742
offset_bottom = 23.0
text = "9999"

[node name="Buy" type="Button" parent="Armas"]
layout_mode = 0
offset_left = 2.8327
offset_top = 123.004
offset_right = 124.833
offset_bottom = 154.004
text = "Comprar arma"

[node name="Description" type="Label" parent="Armas"]
layout_mode = 0
offset_left = 135.582
offset_top = 26.8579
offset_right = 332.582
offset_bottom = 118.858
text = "XXXXXXXXXXXXXXXXXXXXXX"
autowrap_mode = 1

[node name="Shop_exit" type="Button" parent="."]
offset_left = 324.065
offset_top = -193.268
offset_right = 354.065
offset_bottom = -162.268
text = "X"

[connection signal="pressed" from="Armas/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="Shop_exit" to="." method="_on_shop_exit_pressed"]
